# CBasic

./: CMakeLists.txt
data/: config.ini
day01/: dm02_sort.c  dm03_dataType.c  dm04_variable.c  dm05_memory_static.c  dm06_stack_heap.c
lib/: libSocketClient.dylib
src/day01/: dm04_variable.c  dm08_pointer_ruler1.c
src/day02/: dm02_ruler1.c  dm03_ruler2.c  dm04_ruler3.c  dm05_string.c  dm06_char.c  dm07_string_copy.c  dm08_strstr.c
src/day03/: dm01_str_startAndEnd.c  dm02_str_inverse.c  dm03_const.c
src/dm03_pointer/: dm01_input_output.c  dm02_2pointer_input_1.c  dm03_2pointer_input_2.c  dm04_2pointer_input_3.c  dm05_multi_pointer.c
src/dm04_array/: dm01_basic.c  dm02_multi_dimentional_array.c  dm03_line_memory.c  dm04_menu.c  dm05_command.c  dm06_eof.c  dm07_test.c
src/dm05_struct/: dm01_basic.c  dm02_copy.c  dm03_function.c  dm04_pointer.c  dm05_pointer2.c  dm06_deep_copy.c  dm07_offset.c
src/dm06_file/: dm01_write_read.c  dm02_line.c  dm03_binary.c  dm04_config.c  dm04_config.h  dm04_config_app.c
src/dm07_os/: dm01_socket_os_test.c  dm01_socket_os_test2.c  dm02_socket_client.c  dm02_socket_client.h
src/dm08_structure/: dm01_basic.c  dm02_linknode.c
