cmake_minimum_required(VERSION 3.12)
project(CBasic C)

set(CMAKE_C_STANDARD 11)

add_executable(day01_dm02 src/day01/dm02_sort.c)
add_executable(day01_dm03 src/day01/dm03_dataType.c)
add_executable(day01_dm04 src/day01/dm04_variable.c)
add_executable(day01_dm05 src/day01/dm05_memory_static.c)
add_executable(day01_dm06 src/day01/dm06_stack_heap.c)
add_executable(day01_dm08 src/day01/dm08_pointer_ruler1.c)
add_executable(day02_dm02 src/day02/dm02_ruler1.c)
add_executable(day02_dm03 src/day02/dm03_ruler2.c)