cmake_minimum_required(VERSION 3.12)
project(CBasic C)

set(CMAKE_C_STANDARD 11)

#add_executable(day01_dm02 src/day01/dm02_sort.c)c
#add_executable(day01_dm03 src/day01/dm03_dataType.c)
#add_executable(day01_dm04 src/day01/dm04_variable.c)
#add_executable(day01_dm05 src/day01/dm05_memory_static.c)
#add_executable(day01_dm06 src/day01/dm06_stack_heap.c)
#add_executable(day01_dm08 src/day01/dm08_pointer_ruler1.c)
#add_executable(day02_dm02 src/day02/dm02_ruler1.c)
#add_executable(day02_dm03 src/day02/dm03_ruler2.c)
#add_executable(day02_dm04 src/day02/dm04_ruler3.c)
#add_executable(day02_dm05 src/day02/dm05_string.c)
#add_executable(day02_dm07 src/day02/dm07_string_copy.c)
#add_executable(day02_dm08 src/day02/dm08_strstr.c)
#add_executable(day03_dm01 src/day03/dm01_str_startAndEnd.c)
#add_executable(day03_dm02 src/day03/dm02_str_inverse.c)
#add_executable(day03_dm03 src/day03/dm03_const.c)
#add_executable(pointer_01 src/dm03_pointer/dm01_input_output.c)
#add_executable(pointer_02 src/dm03_pointer/dm02_2pointer_input_1.c)
add_executable(pointer_03 src/dm03_pointer/dm03_2pointer_input_2.c)