cmake_minimum_required(VERSION 3.12)
project(CBasic C)

set(CMAKE_C_STANDARD 11)

#add_executable(day01_dm02 src/day01/dm02_sort.c)c
#add_executable(day01_dm03 src/day01/dm03_dataType.c)
#add_executable(day01_dm04 src/day01/dm04_variable.c)
#add_executable(day01_dm05 src/day01/dm05_memory_static.c)
#add_executable(day01_dm06 src/day01/dm06_stack_heap.c)
#add_executable(day01_dm08 src/day01/dm08_pointer_ruler1.c)
#add_executable(day02_dm02 src/day02/dm02_ruler1.c)
#add_executable(day02_dm03 src/day02/dm03_ruler2.c)
#add_executable(day02_dm04 src/day02/dm04_ruler3.c)
#add_executable(day02_dm05 src/day02/dm05_string.c)
#add_executable(day02_dm07 src/day02/dm07_string_copy.c)
#add_executable(day02_dm08 src/day02/dm08_strstr.c)
#add_executable(day03_dm01 src/day03/dm01_str_startAndEnd.c)
#add_executable(day03_dm02 src/day03/dm02_str_inverse.c)
#add_executable(day03_dm03 src/day03/dm03_const.c)
#add_executable(pointer_01 src/dm03_pointer/dm01_input_output.c)
#add_executable(pointer_02 src/dm03_pointer/dm02_2pointer_input_1.c)
#add_executable(pointer_03 src/dm03_pointer/dm03_2pointer_input_2.c)
#add_executable(pointer_04 src/dm03_pointer/dm04_2pointer_input_3.c)
#add_executable(pointer_05 src/dm03_pointer/dm05_multi_pointer.c src/dm04_array/dm01_basic.c)
#add_executable(array_01 src/dm04_array/dm01_basic.c)
#add_executable(array_02 src/dm04_array/dm02_multi_dimentional_array.c)
#add_executable(array_03 src/dm04_array/dm03_line_memory.c)
#add_executable(array_04 src/dm04_array/dm04_menu.c)
#add_executable(array_05 src/dm04_array/dm05_command.c)
#add_executable(array_06 src/dm04_array/dm06_eof.c)
#add_executable(struce_01 src/dm05_struct/dm01_basic.c)
#add_executable(struce_02 src/dm05_struct/dm02_copy.c)
#add_executable(struce_03 src/dm05_struct/dm03_function.c)
#add_executable(struce_04 src/dm05_struct/dm04_pointer.c)
add_executable(struce_05 src/dm05_struct/dm05_pointer2.c)